features btn bug fix, changed menu overlay JS, from display to visibility

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -67,7 +67,8 @@ a {
 
 .social-icon:hover::after {
   width: 100%;
-  bottom: -5px; }
+  bottom: -5px;
+  height: 2px; }
 
 .grid__item:hover .item {
   filter: opacity(0.4) sepia(1); }
@@ -262,6 +263,7 @@ body {
     @media only screen and (max-width: 37.5em) {
       .navigation--mobile-container {
         display: flex;
+        visibility: hidden;
         flex-direction: column;
         position: fixed;
         top: 0;
@@ -355,42 +357,42 @@ body {
       .item__2 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-night-arcade.jpg); } }
   .item__3 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-soccer-team.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
       .item__3 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-soccer-team.jpg); } }
   .item__4 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-grid.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
       .item__4 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-grid.jpg); } }
   .item__5 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-from-above.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
       .item__5 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-from-above.jpg); } }
   .item__6 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-pocket-borealis.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
       .item__6 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-pocket-borealis.jpg); } }
   .item__7 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-curiosity.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
       .item__7 {
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-curiosity.jpg); } }
   .item__8 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/mobile/image-fisheye.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../../images/desktop/image-fisheye.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
     @media only screen and (max-width: 37.5em) {
@@ -492,7 +494,7 @@ body {
     display: none; } }
 
 .features__btn--mobile {
-  display: hidden; }
+  display: none; }
   @media only screen and (max-width: 37.5em) {
     .features__btn--mobile {
       display: inline-block;
