--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -42,6 +42,7 @@ a {
   color: inherit;
   text-transform: inherit;
 }
+
 // Active States
 .navigation-item,
 .social-icon {
@@ -61,6 +62,7 @@ a {
 .social-icon:hover::after {
   width: 100%;
   bottom: -5px;
+  height: 2px;
 }
 .grid__item:hover {
   .item {
