--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -15,6 +15,7 @@
 
     @include respond(phone) {
       display: flex;
+      visibility: hidden;
       flex-direction: column;
       position: fixed;
       top: 0;
