--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -105,7 +105,8 @@
   }
 }
 .features__btn--mobile {
-  display: hidden;
+  display: none;
+
   @include respond(phone) {
     display: inline-block;
     position: absolute;
